--- a/index.css
+++ b/index.css
@@ -792,3 +792,172 @@ figcaption {
     margin-left: -50px;
     display: inline-block;
 }
+
+
+#gallery {
+	 padding-top: 40px;
+}
+ @media screen and (min-width: 991px) {
+	 #gallery {
+		 padding: 60px 30px 0 30px;
+	}
+}
+ .img-wrapper {
+	 position: relative;
+	 margin-top: 15px;
+}
+ .img-wrapper img {
+	 width: 100%;
+}
+ .img-overlay {
+	 background: rgba(0, 0, 0, 0.7);
+	 width: 100%;
+	 height: 100%;
+	 position: absolute;
+	 top: 0;
+	 left: 0;
+	 display: flex;
+	 justify-content: center;
+	 align-items: center;
+	 opacity: 0;
+}
+ .img-overlay i {
+	 color: #fff;
+	 font-size: 3em;
+}
+ #overlay {
+	 background: rgba(0, 0, 0, 0.7);
+	 width: 100%;
+	 height: 100%;
+	 position: fixed;
+	 top: 0;
+	 left: 0;
+	 display: flex;
+	 justify-content: center;
+	 align-items: center;
+	 z-index: 999;
+	 -webkit-user-select: none;
+	 -moz-user-select: none;
+	 -ms-user-select: none;
+	 user-select: none;
+}
+ #overlay img {
+	 margin: 0;
+	 width: 80%;
+	 height: auto;
+	 object-fit: contain;
+	 padding: 5%;
+}
+ @media screen and (min-width: 768px) {
+	 #overlay img {
+		 width: 60%;
+	}
+}
+ @media screen and (min-width: 1200px) {
+	 #overlay img {
+		 width: 50%;
+	}
+}
+ #nextButton {
+	 color: #fff;
+	 font-size: 2em;
+	 transition: opacity 0.8s;
+}
+ #nextButton:hover {
+	 opacity: 0.7;
+}
+ @media screen and (min-width: 768px) {
+	 #nextButton {
+		 font-size: 3em;
+	}
+}
+ #prevButton {
+	 color: #fff;
+	 font-size: 2em;
+	 transition: opacity 0.8s;
+}
+ #prevButton:hover {
+	 opacity: 0.7;
+}
+ @media screen and (min-width: 768px) {
+	 #prevButton {
+		 font-size: 3em;
+	}
+}
+ #exitButton {
+	 color: #fff;
+	 font-size: 2em;
+	 transition: opacity 0.8s;
+	 position: absolute;
+	 top: 15px;
+	 right: 15px;
+}
+ #exitButton:hover {
+	 opacity: 0.7;
+}
+ @media screen and (min-width: 768px) {
+	 #exitButton {
+		 font-size: 3em;
+	}
+}
+
+
+.container-gallery {
+	max-width: 90rem;
+	margin: 0 auto;
+    padding:  4rem;
+    padding-top: 100px;
+}
+
+.interests-title{
+    float: left;
+    margin-left: 150px;
+}
+
+.gallery {
+	display: flex;
+	flex-wrap: wrap;
+	/* Compensate for excess margin on outer gallery flex items */
+	margin: -1rem -1rem;
+}
+
+.gallery-item {
+	/* Minimum width of 24rem and grow to fit available space */
+	flex: 1 0 24rem;
+	/* Margin value should be half of grid-gap value as margins on flex items don't collapse */
+	margin: 1rem;
+	overflow: hidden;
+}
+
+.gallery-image {
+	display: block;
+	width: 90%;
+	height: 100%;
+	object-fit: cover;
+	transition: transform 400ms ease-out;
+}
+
+.gallery-image:hover {
+	transform: scale(1.15);
+}
+
+/*
+
+The following rule will only run if your browser supports CSS grid.
+
+Remove or comment-out the code block below to see how the browser will fall-back to flexbox styling. 
+
+*/
+
+@supports (display: grid) {
+	.gallery {
+		display: grid;
+		grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
+		grid-gap: 2rem;
+	}
+
+	.gallery,
+	.gallery-item {
+		margin: 0;
+	}
+}
