--- a/index.css
+++ b/index.css
@@ -991,3 +991,10 @@ Remove or comment-out the code block below to see how the browser will fall-back
 .interests-back{
     padding-top: 90px;
 }
+
+.video-border{
+    border: solid 2px #a339b0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
